<resources>
    <string name="felhaszn_l_n_v">Felhasználónév</string>
    <string name="jelsz">Jelszó (min 6 karakter)</string>
    <string name="bejelentkez_s">Bejelentkezés</string>
    <string name="regisztr_cio">Regisztráció</string>
    <string name="app_name">VegetableAndFruitShop</string>
    <string name="email">Email</string>
    <string name="jelsz_jra">Jelszó újra</string>
    <string name="telefonsz_m">Telefonszám</string>
    <string name="lakc_m">Lakcím</string>
    <string name="loginpage">Bejelentkezés oldalra!</string>
    <string name="registerpage">Regisztrációs oldalra!</string>
    <string name="item_placeholder">placeholder</string>
    <string name="kos_rba">Kosárba</string>
    <string name="keres_s">Keresés</string>
    <string name="kos_r">Kosár</string>
    <string name="kijelentkez_s">Kijelentkezés</string>
    <string name="v_s_rl_s">Vásárlás</string>
    <string name="t_rl_s">Törlés</string>
    <string name="emptybasket">A kosár üres!</string>
    <string name="_0ft">0Ft</string>
    <string name="rendel_s">Rendelés</string>
    <string name="plus">+</string>
    <string name="minus">−</string>
    <string name="_0">0</string>
    <string name="max_ar">Max ár</string>
    <string name="szures">Szűrés</string>
    <string name="hozz_ad_s">Hozzáadás</string>
    <string name="producttitle">Termék felvétel</string>
    <string name="term_k_neve">Termék neve</string>
    <string name="ar">Ár</string>
    <string name="info">Termék információ</string>
    <string name="m_gse">Mégse</string>
    <string name="uj">Új termék</string>
    <string name="term_k_m_dos_t_s">Termék módosítás</string>
    <string name="m_dos_t_s">Módosítás</string>
    <string name="nincs">\n\nJelenleg nincs rendelésed!</string>
    <string name="rendel_sek">Rendelések</string>


    <!--Példa adatok-->
    <string-array name="name">
        <item>Paradicsom</item>
        <item>Répa</item>
        <item>Alma</item>
        <item>Körte</item>
        <item>Narancs</item>
        <item>Görögdinnye</item>
    </string-array>

    <string-array name="info">
        <item>Ez most zöldség vagy gyümölcs?</item>
        <item>Nagyon jól tudsz majd fütyülni!</item>
        <item>Az orvosokat távol tartja.</item>
        <item>Ne tedd a lámpába!</item>
        <item>A legszebb fáinkról!</item>
        <item>Szép, nagy, gömbölyű!</item>
    </string-array>


    <string-array name="price">
        <item>999 Ft/Kg</item>
        <item>349 Ft/Kg</item>
        <item>549 Ft/Kg</item>
        <item>799 Ft/Kg</item>
        <item>649 Ft/Kg</item>
        <item>399 Ft/Kg</item>
    </string-array>

    <array name="img">
        <item>@drawable/defaultimg</item>
        <item>@drawable/apple</item>
        <item>@drawable/carrot</item>
        <item>@drawable/dinnye</item>
        <item>@drawable/orange</item>
        <item>@drawable/pari</item>
        <item>@drawable/pear</item>
    </array>

</resources>