<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Activity.ModifyProductActivity">

        <TextView
            android:id="@+id/modifyText"
            android:layout_width="398dp"
            android:layout_height="55dp"
            android:layout_marginTop="4dp"
            android:text="@string/term_k_m_dos_t_s"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02" />

        <EditText
            android:id="@+id/name"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:hint="@string/term_k_neve"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifyText"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/price"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:hint="@string/ar"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/info"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:hint="@string/info"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price"
            app:layout_constraintVertical_bias="0.06" />

        <Button
            android:id="@+id/update"
            android:layout_width="273dp"
            android:layout_height="52dp"
            android:onClick="update"
            android:text="@string/m_dos_t_s"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info"
            app:layout_constraintVertical_bias="0.31" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="273dp"
            android:layout_height="52dp"
            android:onClick="cancel"
            android:text="@string/m_gse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</android.widget.ScrollView>
