<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.BasketActivity"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptybasket"
        android:visibility="gone"
        android:textSize="18sp"
        android:layout_centerInParent="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/bottom_bar"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0ft"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"/>

        <Button
            android:id="@+id/rendeles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="order"
            android:text="@string/rendel_s"/>
    </LinearLayout>

</RelativeLayout>
