<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/item_placeholder" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/item_placeholder"/>

        <LinearLayout
            android:id="@+id/mennyiseg"
            android:layout_below="@id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp">

            <Button
                android:id="@+id/decrease_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:padding="8dp" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_placeholder"
                android:padding="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />

            <Button
                android:id="@+id/increase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:padding="8dp" />
        </LinearLayout>


        <Button
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mennyiseg"
            android:text="@string/t_rl_s"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>